      using the diverted grub-install.
    - Add a grub-rescue-efi-amd64 package containing a rescue CD-ROM image
      for EFI-AMD64.  For the moment, the purpose of this is mainly to
      deliver files to debian-installer.
    - Add grub-mount-udeb, containing just grub-mount.  This can be used by
      os-prober and other parts of d-i.

  [ Updated translations ]
  * Belarusian (Viktar Siarheichyk).  Closes: #606864
  * Danish (Joe Hansen).  Closes: #606879
  * Romanian (Andrei POPESCU).  Closes: #606888
  * Italian (Luca Monducci).  Closes: #606891
  * Brazilian Portuguese (Flamarion Jorge).  Closes: #610613
  * Greek (Emmanuel Galatoulas).  Closes: #604847

 -- Colin Watson <cjwatson@debian.org>  Thu, 21 Apr 2011 11:19:57 +0100

grub2 (1.99~rc1-13) unstable; urgency=low

  * Cherry-pick from upstream:
    - Use correct limits for mips initrd.
  * Run grub-install on install or upgrade of grub-yeeloong.
  * Update branch_fuse.patch:
    - Tell FUSE to run single-threaded, since GRUB code is not thread-safe
      (LP: #756297).

 -- Colin Watson <cjwatson@debian.org>  Fri, 15 Apr 2011 12:11:21 +0100

grub2 (1.99~rc1-12) unstable; urgency=low

  * Update branch_butter.patch:
    - Fix filename comparison.
    - Take extent offset in account on uncompressed extents.
    - Use filled extent size if available.
  * Allow use of first sector on btrfs (LP: #757446).
  * Merge from Ubuntu:
    - Build part_msdos and vfat into EFI boot images (LP: #677758).

 -- Colin Watson <cjwatson@debian.org>  Mon, 11 Apr 2011 16:22:08 +0100

grub2 (1.99~rc1-11) unstable; urgency=low

  * Update branch_fuse.patch:
    - Make grub-mount exit non-zero if opening the device or filesystem
      fails.
    - Translate GRUB error codes into OS error codes for FUSE (LP: #756456).
  * Merge from Ubuntu:
    - Fix use of freed memory when replacing existing loopback device
      (LP: #742967).

 -- Colin Watson <cjwatson@debian.org>  Sun, 10 Apr 2011 21:52:26 +0100
