@@ -55,6 +55,9 @@ grub2 (1.99~rc2-1) UNRELEASED; urgency=low
       deliver files to debian-installer.
     - Add grub-mount-udeb, containing just grub-mount.  This can be used by
       os-prober and other parts of d-i.
+  * Don't do a separate build pass for grub-common.  It will be identical to
+    the build for the default platform for the CPU architecture anyway, so
+    reuse that.
 
   [ Updated translations ]
   * Belarusian (Viktar Siarheichyk).  Closes: #606864
